Sun Apr  8 19:01:47 BST 2012  Lee Noar  <leenoar@sky.com>

	* som_runcom.c(register_client): Fix uninitialised member
	of som_objinfo structure.

Sat Apr  7 20:01:05 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (CMUNGEFLAGS): Add PACKAGE_VERSION define.
	* somanager.cmhg (help-string): Use PACKAGE_VERSION for
	version number (which get defined from configure.ac).

Sat Apr  7 19:22:52 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: Change version number to 2.10.
	* somanager.cmhg: Update copyright year list.

Fri Mar 23 20:16:46 GMT 2012  Lee Noar  <leenoar@sky.com>

	* som_command.c(command_status_libraries): When
	printing the size of the R/W segment, don't include
	the bss section. The bss section is only created in
	the client's copy of the R/W segment.

Mon Mar 12 17:57:14 2012  Lee Noar  <leenoar@sky.com>

	* som_register.c(som_register_client): Add support for
	clients built with GCC 4.1.*.
	(som_register_sharedobject): Add support for libraries
	built with GCC 4.1.*.
	* som.h: Define symbols specific to GCC 4.1.*.
	* som_runcom.c(setup_aux_array): Pass ELF header flags
	to dynamic linker in auxillary array (this is where the
	type of floating point system is defined).
	* som_workspace.h: Define a symbol to give the address
	of the runtime array.
	* som_history.h: Fix comment.
	* somanager.cmhg: Change module version to 2.10 due to
	added support for older libraries and change to auxillary
	array (also gives SOManager in 4.1.2 room to grow if
	necessary).
	* dist/!SharedLibs/SOM1stRun,feb: Need version 2.10 of
	SOManager.

Wed Aug 10 16:15:45 2011  Lee Noar  <leenoar@sky.com>

	Better object management and memory usage.
	struct som_object tries to fit into two lists; the
	global list and the client list, but ends up containing
	members that are not appropriate for one or the other.

	* som.h(struct som_object): Move client/global specific
	members to new structures som_library_object and